--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>
-        hello world
-    </h2>
+    
+    <ul>
+      <li>items1</li>
+      <li>items2</li>
+      <li>items3</li>
+    </ul>
 </body>
 </html>
