--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
     
-    <ul>
-      <li>items1</li>
-      <li>items2</li>
-      <li>items3</li>
-    </ul>
+   <p>Character Length
+</p>
 </body>
 </html>
