--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     
-   <p>Character Length
-</p>
+<div class="container">
+    <!-- <header class="header">
+        <h3 class="header__title">Password Generator</h3>
+        <div class="header__passwordBox">
+         <h2  id="password" >P4$5W0rD!</h2>
+         <img src="/src/Assets/icon-copy.svg" alt="icon-copy" class="header__copiIcon">
+        </div>
+    </header> -->
+</div>
 </body>
 </html>
