update the main styles and also create the slider class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
          <img src="/src/Assets/icon-copy.svg" alt="icon-copy" class="header__copiIcon">
         </div>
     </header> -->
+    <main class="main">
+        <div class="main__header">
+            <p>Character Length</p>
+            <label id='Slidevariable'>0</label>
+          <input id='slider' type='range' min='0' max='20' step='1' value='0' />
+        </div>
+    </main>
 </div>
+<script type="module" src="/src/Javascript/main.js"></script>
 </body>
 </html>
