creating the generate btn

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
               </ul>
             </div>
         </div>
+        <div class="main__BtnBox">
+            <button class="generateBtn">generate</button>
+        </div>
     </main>
 </div>
 <script type="module" src="/src/Javascript/main.js"></script>
