add more functionalities to the app

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <h2>STRENGTH </h2>
             <div class="password-powerBox">
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="passBgPower"></li>
+                <li class="passBgPower"></li>
+                <li class="passBgPower"></li>
+                <li class="passBgPower"></li>
               </ul>
             </div>
         </div>
