--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <!-- main main -->
         <div class="main__body">
             <ul class="main__choices">
-                <li><span class="checkBox"></span>Include Uppercase Letters</li>
-                <li><span class="checkBox"></span>Include Lowercase Letters</li>
-                <li><span class="checkBox"></span>Include Numbers</li>
-                <li><span class="checkBox"></span>Include Symbols</li>
+                <li ><span  data-type="uppercase" class="checkBox" ></span>Include Uppercase Letters</li>
+                <li ><span data-type="lowercase" class="checkBox" ></span>Include Lowercase Letters</li>
+                <li ><span data-type="number" class="checkBox" ></span>Include Numbers</li>
+                <li><span  data-type="symbols" class="checkBox" ></span>Include Symbols</li>
             </ul>
         </div>
         <!-- main footer -->
