complete the functionlities without refactoring

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h3 class="header__title">Password Generator</h3>
         <div class="header__passwordBox">
          <h2  id="password" >P4$5W0rD!</h2>
+         <p class="copyPssMsg">COPIED</p>
          <img src="/src/Assets/icon-copy.svg" alt="icon-copy" class="header__copiIcon">
         </div>
     </header> 
