--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         </div>
     </main>
 </div>
-<script type="module" src="/src/Javascript/main.js"></script>
+<script defer type="module" src="/src/Javascript/main.js"></script>
 </body>
 </html>
